404 page design + is footer is fixed or not on mobile or desktop.

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -103,6 +103,18 @@ section {
   font-size: 2.5rem;
   font-weight: 300;
 }
+.btn-err {
+  padding: 1.5rem;
+  color: #fff !important;
+  border-radius: 2rem;
+}
+.c-s {
+  margin-top: 25rem;
+}
+.btn-err:hover {
+  transition: all 0.5s;
+  opacity: 0.9;
+}
 .semi {
   font-weight: 300;
   font-size: 2rem;
